# prebuilt-synology-dnsmasq

./: BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md
.github/: renovate.json
.github/workflows/: ci.yaml  release.yaml
