module(
    name = "prebuilt-synology-dnsmasq",
    version = "1.0",
)

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1", dev_dependency = True)

bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_synology", version = "0.2.3")

# local_path_override(module_name = "rules_synology", path = "../rules_synology")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "dnsmasq",
    build_file = "//:dnsmasq/foreign_cc.dnsmasq.bazel",
    sha256 = "f622682848b33677adb2b6ad08264618a2ae0a01da486a93fd8cd91186b3d153",
    strip_prefix = "dnsmasq-2.91",
    urls = [
        "https://thekelleys.org.uk/dnsmasq/dnsmasq-2.91.tar.xz",
    ],
)

# register toolchains by wildcard :) (thanks, github/cameron-martin)
register_toolchains("@rules_synology//toolchains:all")
